# AtlasAI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  prometheus.yml  pyproject.toml  requirements.txt  vercel.json
frontend/: .env.production  README.md  next.config.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/app/: layout-client.tsx  layout.tsx  page.tsx  theme-config.ts  theme.tsx
frontend/src/app/components/: ChatBox.tsx  ChatInterface.tsx  DashboardLayout.tsx  Header.tsx  Sidebar.tsx  StatsCard.tsx  StatsOverview.tsx  WelcomeCard.tsx  WelcomeSection.tsx
frontend/src/components/: Chat.js  Dashboard.js  Layout.js  Settings.js
k8s/: deployment.yml
src/atlas/core/: agent.py  config.py
src/atlas/memory/: vector_store.py
src/atlas/services/: query_handler.py
src/atlas/workflows/: engine.py
tests/: test_agent.py
