[tool.poetry]
name = "atlas-ai"
version = "0.1.0"
description = "A Native AI Agent System for Insight Generation & Adaptive Intelligence"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.0"
langchain = "^0.0.300"
haystack-ai = "^2.0.0"
transformers = "^4.30.0"
torch = "^2.0.0"
pymilvus = "^2.2.0"
temporalio = "^1.0.0"
python-dotenv = "^0.19.0"
prometheus-client = "^0.15.0"
prometheus-fastapi-instrumentator = "^5.0.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.18.0"
black = "^22.3.0"
isort = "^5.10.0"
flake8 = "^4.0.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true